# qanon-sa

./: PHASE2-CONTENT-CALENDAR.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vercel.json
telegram-bot/: .env.example  .gitignore  Dockerfile.admin  Dockerfile.bot  README.md  alembic.ini  docker-compose.yml  pyproject.toml
telegram-bot/alembic/: env.py
telegram-bot/alembic/versions/: 0001_initial.py  0002_pgvector_kb_chunks.py
telegram-bot/app/: main_admin.py  main_bot.py
telegram-bot/app/admin/: app.py  auth.py  deps.py  templating.py
telegram-bot/app/admin/routes/: admins.py  appeals.py  (+9 more)
telegram-bot/app/bot/: bootstrap.py
telegram-bot/app/core/: config.py  constants.py  i18n.py  logging.py  security.py
telegram-bot/app/db/: session.py
telegram-bot/app/llm/: answer_builder.py  embeddings.py  ollama_client.py  prompts.py  rag_retriever.py
telegram-bot/app/moderation/: classifier.py  decision.py  guardrails.py  pipeline.py  prefilter.py  schemas.py
telegram-bot/app/services/: appeal_service.py  canned_service.py  kb_ingest_service.py  mute_service.py  question_log_service.py  settings_service.py  stats_service.py  violation_service.py
telegram-bot/nginx/: admin.conf
telegram-bot/scripts/: check_no_outbound.py  eval_moderation.py  extract_kb.mjs  ingest_kb.py  pull_ollama_models.sh  seed_admin.py
telegram-bot/tests/: conftest.py
telegram-bot/tests/eval/: cases_arabic.yaml
telegram-bot/tests/unit/: test_answer_builder.py  test_chunking.py  test_classifier_parser.py  test_decision.py  test_guardrails.py
(+119 files in other folders)
