[project]
name = "qanon-sa-telegram-bot"
version = "0.1.0"
description = "Saudi legal Telegram bot - local LLM, strict moderation, Arabic RTL admin panel"
requires-python = ">=3.11,<3.13"
dependencies = [
    "aiogram>=3.13,<4",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "jinja2>=3.1,<4",
    "python-multipart>=0.0.12,<1",
    "itsdangerous>=2.2,<3",
    "passlib[bcrypt]>=1.7.4,<2",
    "bcrypt==4.0.1",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    "sqlalchemy[asyncio]>=2.0.36,<3",
    "asyncpg>=0.30,<1",
    "aiosqlite>=0.20,<1",
    "alembic>=1.14,<2",
    "pgvector>=0.3.6,<1",
    "httpx>=0.28,<1",
    "structlog>=24.4,<25",
    "sentence-transformers>=3.3,<4",
    "numpy>=2.1,<3",
    "tiktoken>=0.8,<1",
    "prometheus-client>=0.21,<1",
    "tenacity>=9.0,<10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=6.0,<7",
    "ruff>=0.8,<1",
    "mypy>=1.13,<2",
    "pyyaml>=6.0,<7",
]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "ASYNC"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --strict-markers"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
